docs: JVM mimarisi görsel diyagramı daha okunaklı hale getirildi